# quotes

./: .gitignore  authors.json  config.ini  connect_mongo.py  models_mongo.py  pyproject.toml  quotes.json
quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quoteapp/management/commands/: import_data_from_json.py  import_data_from_mongo.py
quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date.py
quoteapp/static/quoteapp/: style.css
quoteapp/templates/quoteapp/: add_author.html  add_quote.html  add_tag.html  author_detail.html  base.html  index.html  look_for_tag.html  quote_detail.html  search.html  top_tags.html
quotes/: settings.py  urls.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  profile.html  signup.html
